--- a/style.css
+++ b/style.css
@@ -17,10 +17,10 @@ body {
 
 /* Header and Navigation */
 header {
-    background: #333;
-    color: #fff;
-    padding: 1rem 0;
-    border-bottom: #77aaff 3px solid;
+     margin: auto;
+    padding: 0 20px;
+    text-align: center;
+    color: #882;
 }
 
 header h1 {
