--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /* Basic Reset and Global Styles */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Lato, sans-serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    background-color: #000000;
+    background-color: #0000FF;
     color: #000;
 }
 
