--- a/style.css
+++ b/style.css
@@ -65,8 +65,8 @@ section {
 }
 
 #projects {
-    background: #e9e9e9;
-
+    background: url(Ocean.gif) 
+    
 }
 
 section h2 {
@@ -91,20 +91,19 @@ section h2 {
 .btn:hover {
     background: #555;
 }
+
+
+/* ========================================
+   PROJECT CARDS
+   ======================================== */
 .project-header{
     font-size: 30px;
     text-align: center;
     margin: auto;
     background-color: #fff;
     color: #000
-    
-
 }
-
-/* ========================================
-   PROJECT CARDS
-   ======================================== */
-.project-card {
+   .project-card {
     background: #fff;
     padding: 20px;
     border: 1px solid #ddd;
